--- a/express/views/contact-me.html
+++ b/express/views/contact-me.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index - A Basic Node Info Site</title>
+    <title>CONTACT</title>
 </head>
 
 <body>
-
+    <h1>CONTACT ME</h1>
 </body>
 
 </html>
